<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/mybackground">


    <TextView
        android:id="@+id/txt_nik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nik"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_nama"
        android:layout_below="@+id/txt_nik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_tempat"
        android:layout_below="@+id/txt_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempat_lahir"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_below="@+id/txt_tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_lahir"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_alamat"
        android:layout_below="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_jk"
        android:layout_below="@+id/txt_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jk"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_pekerjaan"
        android:layout_below="@+id/txt_jk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pekerjaan"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_below="@+id/txt_pekerjaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:padding="10dp" />


</RelativeLayout>