<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/mybackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:layout_margin="20dp"
            android:layout_centerHorizontal="true"/>


        <EditText
            android:id="@+id/edit_nik"
            android:layout_below="@+id/txt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="number"
            android:maxLength="16"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            android:autofillHints=""
            android:hint="@string/nik"/>

        <EditText
            android:id="@+id/edit_nama"
            android:layout_below="@+id/edit_nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            android:maxLength="50"
            android:autofillHints=""
            android:hint="@string/nama"/>


        <EditText
            android:id="@+id/edit_tempat"
            android:layout_below="@+id/edit_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            android:autofillHints=""
            android:hint="@string/tempat_lahir"/>


        <LinearLayout
            android:id="@+id/ly_date"
            android:layout_below="@+id/edit_tempat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="date"
                android:autofillHints=""
                android:hint="@string/tanggal_lahir"
                tools:ignore="LabelFor" />
            <Button
                android:id="@+id/btn_date"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/select_date"
                android:layout_marginStart="20dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_alamat"
            android:layout_below="@+id/ly_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor"
            android:maxLength="300"
           android:maxLines="3"
            android:hint="@string/alamat"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txt_jk"
            android:layout_below="@+id/edit_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/jk"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/group_gender"
            android:layout_below="@+id/txt_jk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_btnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/L"
                android:buttonTint="@color/teal_700"/>

            <RadioButton
                android:id="@+id/radio_btnp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P"
                android:buttonTint="@color/teal_700"/>

        </RadioGroup>

        <TextView
            android:id="@+id/txt_pekerjaan"
            android:layout_below="@+id/group_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/pekerjaan"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spin_kerja"
            android:layout_below="@+id/txt_pekerjaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/pekerjaan"
            android:prompt="@string/pilih_pekerjaan"/>
        <TextView
            android:id="@+id/txt_status"
            android:layout_below="@+id/spin_kerja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/status"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/spin_status"
            android:layout_below="@id/txt_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/status"
            android:prompt="@string/pilih_status"/>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spin_status"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_with_this"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_and_conditions"
                android:textSize="16sp"
                android:textColor="@android:color/holo_blue_light"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/layout"
            android:layout_margin="20dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:backgroundTint="@color/teal_700"/>

    </RelativeLayout>

</ScrollView>